# Programming-Lightning-Building-A-Node

./: .replit  Cargo.toml  directions.md  on_chain_wallet.sqlite3  replit.nix  start.sh  tree.txt
.lightning/node1/: config  log
.tutorial/: 1.01-welcome.md  1.02-setup.md  1.03-intro.md  1.03.5-intro.md  1.03.6-ldk-intro.md  1.04-lightning-development-kit.md  1.05-bitcoind_client.md  1.05-blockchain-source.md  1.06-blockchain-source.md  1.07-broadcaster.md  1.08-fee-estimation.md  1.09-on-chain-wallet.md  1.10-BIP32.md  1.10-KeysManager.md  1.11-KeysManager.md  1.12-persist.md  1.14-BOLT-7-Gossip.md  1.15-ldk-networking.md  1.16-channel-management.md  1.17-ldk-event-handler.md  1.18-ldk-open-channel.md  1.18-ldk-send-payment.md  1.19-ldk-components-network.md  1.19-ldk-send-payment.md  1.20-run-your-node.md  1.21-answers.md  1.21-ldk-open-channel.md  x.xx-BOLT-2-Peer-Protocol.md  xx-blockchain-source-old.md  xx.keys_manager_old.md  xxx-ldk-components-peer-management.md
.tutorial/archive/: xx-ldk-send-payment-copy.md
src/: args.rs  bdk_wallet.rs  bitcoind_client.rs  cli.rs  commands.rs  convert.rs  disk.rs  events.rs  filesystem_store.rs  fs_store.rs  hex_utils.rs  keys_manager.rs  keysmanager.rs  lib.rs  logger.rs  main.rs  networking.rs  onchain_wallet.rs  sweep.rs  tests.rs
src/exercises/: bitcoind.rs  fee_estimator.rs  mod.rs
src/internal/: all_exercises.md  bitcoind_client.rs  channel_manager.rs  mod.rs  onchain_wallet.rs  types.rs
src/intro/: exercises.rs  mod.rs  tests.rs
src/solutions/: README.md  logger.rs  (+2 more)
test_dir/: keys_seed  test_wallet.sqlite3
(+8 files in other folders)
